# infrastructureSetup

./: .dockerignore  .gitignore  404.html  README.md  docker-compose.dev.yml  docker-compose.prod.yml  index.html  pyproject.toml  tasks.py
.github/workflows/: documentation.yml
about/: index.html
docker/: index.html
getting_started/: index.html
infrastructure/load_balancer/: Dockerfile.dev  Dockerfile.prod  haproxy.cfg
infrastructure/nagios/etc/: cgi.cfg  htpasswd.users  nagios.cfg  webservers.txt
infrastructure/nagios/etc/objects/: commands.cfg  (+5 more)
infrastructure/nagios/libexec/: check-mqtt.py  check_apt  check_breeze  check_by_ssh  check_cluster  check_dbi  check_dhcp  check_dig  check_disk  check_disk_smb  check_dns  check_dummy  check_file_age  check_flexlm  check_fping  check_game  check_hpjd  check_http  check_icmp  check_ide_smart  check_ifoperstatus  check_ifstatus  check_ircd  check_ldap  check_load  check_log  check_mailq  check_mrtg  check_mrtgtraf  check_mssql_database.py  check_mssql_server.py  check_nagios  check_ncpa.py  check_nrpe  check_nt  check_ntp  check_ntp_peer  check_ntp_time  check_nwstat  check_oracle  (+23 more)
infrastructure/tests/: test_app.py
infrastructure/web_server/: Dockerfile.dev  Dockerfile.prod  app.py
infrastructure/web_server/templates/: index.html
lessons_learned/: index.html
loadbalancer/: index.html
mkdocs/: mkdocs.yml
mkdocs/docs/: about.md  docker.md  getting_started.md  index.md  lessons_learned.md  loadbalancer.md  nagios.md  webserver.md
nagios/: index.html
search/: search_index.json
webserver/: index.html
